// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons Component: CloseIconBlack CloseIconBlack renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 14 14"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: EmailIcon EmailIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
      fill="#000"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: FilledArrowIcon FilledArrowIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m3.166 8 .94.94 3.727-3.72v8.113h1.333V5.22l3.72 3.727.947-.947-5.334-5.333L3.166 8Z"
      fill="currentcolor"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: TooltipIcon TooltipIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height="16"
      id="a"
      maskUnits="userSpaceOnUse"
      style="mask-type: alpha;"
      width="16"
      x="0"
      y="0"
    >
      <path
        d="M7.333 4.667h1.334V6H7.334V4.667ZM7.333 7.333h1.334v4H7.334v-4Z"
        fill="currentcolor"
      />
      <path
        clip-rule="evenodd"
        d="M1.333 8A6.67 6.67 0 0 1 8 1.333 6.67 6.67 0 0 1 14.667 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8Zm1.334 0A5.34 5.34 0 0 0 8 13.333 5.34 5.34 0 0 0 13.334 8 5.34 5.34 0 0 0 8 2.667 5.34 5.34 0 0 0 2.667 8Z"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </mask>
    <g
      mask="url(#a)"
    >
      <path
        d="M0 0h16v16H0z"
        fill="currentcolor"
      />
    </g>
  </svg>
</DocumentFragment>
`;
